option('validation', type: 'boolean', value: false,
  description: 'Validate the untranslated XML file')
option('build-translations', type: 'boolean', value: true,
  description: 'Build translated website')
option('allow-network-access', type: 'boolean', value: true,
  description: 'Allow xmllint and xsltproc to fetch files over the network')
